Update to multi-os-v6.4.sh
New menu option [8] - Install Firefox
module firefox addon 
 add two recon tool 
1 hakrawler
2 waybackurls
fix gau installation
detach go from gau installation